hphp/hack/test/typecheck/reactive/mayberx11.php.exp
File "mayberx11.php", line 11, characters 19-20:
Invalid argument (Typing[4203])
File "mayberx11.php", line 4, characters 19-20:
This function is reactive.
File "mayberx11.php", line 9, characters 32-48:
This function is maybe (local reactive).
